// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Monitoring Webapp Tests Snapshot - Monitoring Webapp 1`] = `
<div>
  <iframe
    src="resources/webapp/monitoring-webapp/index.html?"
    style="width: 100%; height: 100%; padding: 10px;"
  />
</div>
`;

exports[`Monitoring Webapp Tests Snapshot - Monitoring Webapp with parameters 1`] = `
<div>
  <iframe
    src="resources/webapp/monitoring-webapp/index.html?dataIndexUrl=http%3A%2F%2Flocalhost%3A8180&import=someDashboard.yml&workflowId=test123"
    style="width: 100%; height: 100%; padding: 10px;"
  />
</div>
`;
